@@ -18,28 +18,27 @@
   -->
 
 <menu
-  xmlns:tools="http://schemas.android.com/tools"
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  tools:ignore="AlwaysShowAction">
+  xmlns:tools="http://schemas.android.com/tools">
 
   <item
     android:id="@+id/action_track_next_chore_schedule"
-    android:title="@string/action_track_next_chore_schedule"
     android:icon="@drawable/ic_round_play_arrow"
+    android:title="@string/action_track_next_chore_schedule"
     app:showAsAction="always" />
 
   <item
     android:id="@+id/action_skip_next_chore_schedule"
-    android:title="@string/action_skip_next_chore_schedule"
     android:icon="@drawable/ic_round_skip_next"
-    app:showAsAction="always" />
+    android:title="@string/action_skip_next_chore_schedule"
+    app:showAsAction="ifRoom" />
 
   <item
     android:id="@+id/action_track_chore_execution"
-    android:title="@string/action_track_chore_execution"
     android:icon="@drawable/ic_round_play_arrow"
-    app:showAsAction="always" />
+    android:title="@string/action_track_chore_execution"
+    app:showAsAction="never" />
 
   <item
     android:id="@+id/action_reschedule_next_execution"
