@@ -7,6 +7,7 @@
 - Fixed: wrong title alignment in some list bottom sheets
 - Fixed: crash when product overview dialog is called when shopping lists feature is disabled
 - Fixed: Grouping option in shopping mode was not saved (#754)
+- Fixed: Chore details not opening (#749)
 
 ## 3.3.0
 
